--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cpy": "^10.1.0",
     "sass": "^1.69.4",
     "stylelint": "^15.11.0",
+    "stylelint-config-primer": "^11.1.1",
     "stylelint-config-sass-guidelines": "^10.0.0",
     "stylelint-config-standard": "^34.0.0"
   }
